# geo-search-llm-demo

./: .gitignore  Dockerfile  LICENSE  README.md  app_self-query.py  chainlit.md  data.csv  nl_geodata_scraper_vectorizer.ipynb  prompts.py  pyproject.toml  requirements.txt  setting.py
.github/workflows/: main_geo-search-llm-demo.yml
chroma_db/569c194d-8819-4eeb-9ec4-479c0770a3da/: index_metadata.pickle
